[gd_scene load_steps=2 format=3 uid="uid://run_start_screen_001"]

[ext_resource type="Script" path="res://scripts/UI/RunStartScreen.gd" id="1_script"]

[node name="RunStartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxHeli" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxHeli"]
layout_mode = 2
text = "SELECT HELICOPTER"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/VBoxHeli"]
layout_mode = 2
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxHeli/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxWeapon" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxWeapon"]
layout_mode = 2
text = "SELECT WEAPON"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/VBoxWeapon"]
layout_mode = 2
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxWeapon/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxUlt" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxUlt"]
layout_mode = 2
text = "SELECT ULTIMATE"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/VBoxUlt"]
layout_mode = 2
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxUlt/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Footer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="StartButton" type="Button" parent="MarginContainer/Footer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "START MISSION"
